--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
     Hi {{ user.username }}!
     <p><a href="{% url 'logout' %}">Log Out</a></p>
 {% else %}
-    <p>You are logged in</p>
+    <p>You are logged out</p>
     <a href="{% url 'login' %}">Log In</a>
     <a href="{% url 'signup' %}">Sign Up</a>
 {% endif %}
